--- a/pom.xml
+++ b/pom.xml
@@ -58,6 +58,23 @@
     <build>
         <plugins>
             <plugin>
+                <!-- Build an executable JAR -->
+                <groupId>org.apache.maven.plugins</groupId>
+                <artifactId>maven-jar-plugin</artifactId>
+                <version>3.1.0</version>
+                <configuration>
+                    <archive>
+                        <manifest>
+                            <addClasspath>true</addClasspath>
+                            <classpathPrefix>lib/</classpathPrefix>
+                            <mainClass>
+                                root.intelligentasteroidsshooter.IntelligentAsteroidsShooter
+                            </mainClass>
+                        </manifest>
+                    </archive>
+                </configuration>
+            </plugin>
+            <plugin>
                 <groupId>org.apache.maven.plugins</groupId>
                 <artifactId>maven-compiler-plugin</artifactId>
                 <version>3.13.0</version>
@@ -76,7 +93,7 @@
                         <id>default-cli</id>
                         <configuration>
                             <mainClass>
-                                root.intelligentasteroidsshooter/root.intelligentasteroidsshooter.IntelligentAsteroidsShooter
+                                root.intelligentasteroidsshooter.IntelligentAsteroidsShooter
                             </mainClass>
                             <launcher>app</launcher>
                             <jlinkZipName>app</jlinkZipName>
